--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,15 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+
+# AUTH
+
+# Github
+AUTH_GITHUB_ID=...
+AUTH_GITHUB_SECRET=...
+AUTH_SECRET=...
+
+# Google
+AUTH_CLIENT_ID=...
+AUTH_CLIENT_SECRET=..
