--- a/package.json
+++ b/package.json
@@ -9,22 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.27.0",
+    "@auth/prisma-adapter": "^1.4.0",
     "@prisma/client": "5.8.0",
+    "bcryptjs": "^2.4.3",
     "cookies-next": "^4.1.1",
     "next": "14.0.4",
+    "next-auth": "5.0.0-beta.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.16",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.35",
     "prisma": "5.8.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
